# text-templates

./: CHANGELOG.md  Makefile  README.md  hie.yaml  stack.yaml  string-templates.cabal  text-templates.cabal
src/Data/: StringTemplate.hs  TextTemplate.hs
src/Data/StringTemplate/: JSON.hs  JSONInternal.hs  Parser.hs  QQInternal.hs  TemplateInternal.hs  Text.hs
src/Data/TextTemplate/: JSON.hs  JSONInternal.hs  QQInternal.hs  TemplateInternal.hs  Text.hs
test/Data/StringTemplate/: JSONInternalSpec.hs  QQInternalSpec.hs  TemplateInternalSpec.hs
test/Data/TextTemplate/: JSONInternalSpec.hs  QQInternalSpec.hs  TemplateInternalSpec.hs
test/Test/QuickCheck/: StringTemplate.hs  TextTemplate.hs
