cabal-version: 2.2

name:           string-templates
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/heades/string-templates#readme>
homepage:       https://github.com/heades/string-templates#readme
bug-reports:    https://github.com/heades/string-templates/issues
author:         Harley Eades III
maintainer:     harley.eades@wbee.fit
copyright:      BSD-3-Clause
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/heades/string-templates

library
  exposed-modules:
      Data.StringTemplate
      Data.StringTemplate.Text
      Data.StringTemplate.Parser
      Data.StringTemplate.JSON      
  other-modules:
      Paths_string_templates
      Data.StringTemplate.TemplateInternal
      Data.StringTemplate.QQInternal
  autogen-modules:
      Paths_string_templates
  hs-source-dirs:
      src
  ghc-options: -Wall 
               -Wcompat 
               -Widentities 
               -Wincomplete-record-updates 
               -Wincomplete-uni-patterns 
               -Wmissing-export-lists 
               -Wmissing-home-modules 
               -Wpartial-fields 
               -Wredundant-constraints
               -Wno-name-shadowing 
  default-extensions:     
    ImportQualifiedPost
    OverloadedStrings
    InstanceSigs
    LambdaCase
    ViewPatterns
    PatternSynonyms
    GADTs
  build-depends:
       base >=4.7 && <5
      ,text
      ,type-natural
      ,template-haskell    
      ,constraints
      ,regex-tdfa >=1.3.2.5 && <1.4
      ,mtl
      ,extra
      ,megaparsec
  default-language: Haskell2010

test-suite string-templates-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_string_templates
      Data.StringTemplate.TemplateInternalSpec
      Data.StringTemplate.QQInternalSpec
      Test.QuickCheck.StringTemplate
  autogen-modules:
      Paths_string_templates
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  default-extensions: 
    ImportQualifiedPost
    OverloadedStrings
    InstanceSigs
    LambdaCase
    ViewPatterns
    GADTs
  build-depends:
     base >=4.7 && <5
    ,string-templates
    ,text
    ,type-natural
    ,template-haskell    
    ,hspec
    ,hspec-contrib
    ,QuickCheck
    ,quickcheck-instances
    ,HUnit
  default-language: Haskell2010
