cabal-version: 2.2

name:           text-templates
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/heades/text-templates#readme>
homepage:       https://github.com/heades/text-templates#readme
bug-reports:    https://github.com/heades/text-templates/issues
author:         Harley Eades III
maintainer:     harley.eades@wbee.fit
copyright:      BSD-3-Clause
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/heades/text-templates

library
  exposed-modules:
      Data.TextTemplate
      Data.TextTemplate.TemplateInternal
      Data.TextTemplate.QQInternal
      Data.TextTemplate.Text
      Data.TextTemplate.JSON
      Data.TextTemplate.JSONInternal
  other-modules:
      Paths_text_templates      
  autogen-modules:
      Paths_text_templates
  hs-source-dirs:
      src
  ghc-options: -Wall 
               -Wcompat 
               -Widentities 
               -Wincomplete-record-updates 
               -Wincomplete-uni-patterns 
               -Wmissing-export-lists 
               -Wmissing-home-modules 
               -Wpartial-fields 
               -Wredundant-constraints
               -Wno-name-shadowing 
  default-extensions:     
    ImportQualifiedPost
    OverloadedStrings
    InstanceSigs
    LambdaCase
    ViewPatterns
    PatternSynonyms
    GADTs
  build-depends:
       base >=4.7 && <5
      ,text
      ,type-natural
      ,template-haskell    
      ,constraints
      ,regex-tdfa >=1.3.2.5 && <1.4
      ,mtl
      ,extra
      ,megaparsec
      ,containers
  default-language: Haskell2010

test-suite text-templates-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_text_templates
      Data.TextTemplate.TemplateInternalSpec
      Data.TextTemplate.QQInternalSpec
      Test.QuickCheck.TextTemplate
      Data.TextTemplate.JSONInternalSpec
  autogen-modules:
      Paths_text_templates
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  default-extensions: 
    ImportQualifiedPost
    OverloadedStrings
    InstanceSigs
    LambdaCase
    ViewPatterns
    GADTs
  build-depends:
     base >=4.7 && <5
    ,text-templates
    ,text
    ,megaparsec
    ,type-natural
    ,template-haskell    
    ,containers
    ,hspec
    ,hspec-contrib
    ,QuickCheck
    ,quickcheck-instances
    ,HUnit
  default-language: Haskell2010
